# agenttrace

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEA-4-agent-accountability-sdk.md  README.md  RELEASE_PLAN.md  SECURITY.md  package-lock.json  package.json  seed-test-data.mjs  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml  publish.yml
agenttrace-ui/: index.html  package-lock.json  package.json  server.js
agenttrace-ui/src/: App.tsx  index.css
examples/: custom-agent.ts  frameworks-test.ts  manual-pipeline-test.ts  manual-test.ts  openai-agent.ts  with-human-approval.ts
python/: README.md  pyproject.toml
python/agentguard/: __init__.py
python/agenttrace/: __init__.py  explainer.py  guard.py  rules.py  store.py  types.py
python/tests/: test_guard.py
src/: explainer.ts  guard.ts  index.ts  openai-stub.d.ts  pipeline-validator.ts  pipeline.ts  store.ts  tracer.ts  types.ts
src/rules/: advice.ts  discrimination.ts  financial.ts  hallucination.ts  harmful.ts  human-approval.ts  index.ts  manipulation.ts  pii.ts  security.ts
tests/integration/: api.test.ts  full-flow.test.ts
tests/unit/: guard-pipeline-context.test.ts  guard.test.ts  hallucination-v2.test.ts  pipeline.test.ts  store.test.ts  tracer.test.ts  v3-features.test.ts
