[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentguard"
version = "0.1.0"
description = "The open-source accountability layer for AI agents. Trace every action. Explain every decision. Control what matters."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "ai-agents", "accountability", "explainability", "guardrails",
    "audit-trail", "langchain", "openai", "anthropic", "agent-safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.27.0"]
langchain = ["langchain-core>=0.2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentguard*"]
