[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttrace"
version = "0.1.0"
description = "The accountability layer for AI agents. Trace, explain, and control agent actions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AgentTrace Contributors", email = "hello@agenttrace.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kalash33/agenttrace"
Issues = "https://github.com/kalash33/agenttrace/issues"
